# invoiceAgent-new

./: .env  .gitignore  README.md  app.py  check_workflow.py  force_debug.py  generate_invoices.py  init_db.py  pyproject.toml  requirements-test.txt  requirements.txt  run_app.py  run_tests.sh  run_workflow_processor.py  setup.py  setup.sh  test_db.py  test_register.py
.streamlit/: config.toml
config/: database.yaml  sources.yaml  validation_rules.json
config/notification_templates/: invoice_exception.html  invoice_exception.slack
config/schemas/: validation_rules.json
data/: invoice_agent.db  metrics.json  processing_history.json
src/invoice_agent/: __init__.py  agent.py  database.py  models.py  (+1 more)
src/invoice_agent.egg-info/: PKG-INFO  SOURCES.txt
test_audit_logs/: 2025-01-31.jsonl
tests/: conftest.py  setup_test_env.py  test_audit_logger.py  test_config.py  test_data_model.py  test_metrics.py  test_notification_manager.py  test_workflow_processor.py
uploads/: INV-000001.pdf.json  invoice_INV1018_normal.pdf.json  invoice_INV1019_normal.pdf.json  invoice_INV1020_normal.pdf.json
workflows/: 509d5383-0edc-4e9c-8337-f7e12e9174ee.json  5e61fc4d-761f-40b6-a0e3-d4724a05b0a3.json  793db692-af9b-45c1-a771-0237ba29cb21.json  9f17d978-68aa-472e-81b8-7d00116b0716.json  a46fd00e-8b3c-403e-a951-8104c116f2cc.json  b4ba5ef8-3955-4847-8567-98ff7157da50.json  b57b096a-b0ba-4adf-b659-3947ad905498.json  ba8ec932-ae70-4f56-9cd4-04957d2647f6.json  c6dec404-a297-43ba-ab14-935f0cde3f9b.json  d5721487-1f64-41d4-bead-62d0328af687.json  da43f790-2821-4ece-8479-5e3060fac999.json
(+212 files in other folders)
