[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "An invoice processing agent with OCR and matching capabilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/invoice_agent"
"Bug Tracker" = "https://github.com/yourusername/invoice_agent/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["invoice_agent*"]
namespaces = false 